--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,15 @@
+@use "config" as *;
+
+body {
+    width: 100vw;
+    height: 100vh;
+    font-family: "Manrope", sans-serif;
+}
+
+h1 {
+    font-size: 15px;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
