--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,40 +1,33 @@
-/*
-# Front-end Style Guide
+$slider-bar-full: hsl(174, 77%, 80%);
+$slider-bg: hsl(174, 86%, 45%);
+$discount-bg: hsl(14, 92%, 95%);
+$discount-text: hsl(15, 100%, 70%);
+$cta-text: hsl(226, 100%, 87%);
+$wrapper-bg: hsl(0, 0%, 100%);
+$primary-bg: hsl(230, 100%, 99%);
+$empty-slider: hsl(224, 65%, 95%);
+$toggle-bg: hsl(223, 50%, 87%);
+$secondary-text: hsl(225, 20%, 60%);
+$primary-text: hsl(227, 35%, 25%);
 
-## Layout
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-The designs were created to the following widths:
+h1 {
+    font-size: 15px;
+}
 
-- Mobile: 375px
-- Desktop: 1440px
+@mixin media-md {
+    @media screen and (min-width: 768px) {
+        @content;
+    }
+}
 
-## Colors
-
-### Primary
-
-- Soft Cyan (Full Slider Bar): hsl(174, 77%, 80%)
-- Strong Cyan (Slider Backround): hsl(174, 86%, 45%)
-- Light Grayish Red (Discount Background): hsl(14, 92%, 95%)
-- Light Red (Discount Text): hsl(15, 100%, 70%)
-- Pale Blue (CTA Text): hsl(226, 100%, 87%)
-
-### Neutral
-
-- White (Pricing Component Background): hsl (0, 0%, 100%)
-- Very Pale Blue (Main Background): hsl(230, 100%, 99%)
-- Light Grayish Blue (Empty Slider Bar): hsl(224, 65%, 95%)
-- Light Grayish Blue (Toggle Background): hsl(223, 50%, 87%)
-- Grayish Blue (Text): hsl(225, 20%, 60%)
-- Dark Desaturated Blue (Text & CTA Background): hsl(227, 35%, 25%)
-
-## Typography
-
-### Body Copy
-
-- Font size (Introductory Paragraph): 15px
-
-### Font
-
-- Family: [Manrope](https://fonts.google.com/specimen/Manrope)
-- Weights: 600, 800
-*/
+@mixin media-lg {
+    @media screen and (min-width: 1024px) {
+        @content;
+    }
+}
