--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,16 +4,52 @@ body {
     width: 100vw;
     height: 100vh;
     font-family: "Manrope", sans-serif;
+    background-image: url("../src/images/bg-pattern.svg");
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: 100% 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-h1 {
-    font-size: 15px;
+header {
+    width: 90%;
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../src/images/pattern-circles.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+
+    h1 {
+        font-size: 1.3rem;
+        margin-bottom: 1rem;
+        color: $primary-text;
+    }
+
+    p {
+        font-size: 0.9375rem;
+        line-height: 1.5rem;
+        color: $secondary-text;
+    }
 }
 
-.attribution {
-    font-size: 11px;
-    text-align: center;
+main {
+    width: 100%;
 }
-.attribution a {
-    color: hsl(228, 45%, 44%);
+
+footer {
+    position: fixed;
+    bottom: 0.5rem;
+
+    .attribution {
+        font-size: 11px;
+        text-align: center;
+    }
+    .attribution a {
+        color: hsl(228, 45%, 44%);
+    }
 }
