--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,9 +10,22 @@ body {
     background-size: 100% 50%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     letter-spacing: 0.03rem;
     font-weight: 600;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    background-image: url("../src/images/bg-pattern.svg");
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: 100% 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
@@ -32,7 +45,12 @@ header {
         color: $primary-text;
     }
 
-    p {
+    .text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    span {
         font-size: 0.9375rem;
         line-height: 1.5rem;
         color: $secondary-text;
@@ -47,7 +65,7 @@ main {
 }
 
 .wrapper {
-    width: clamp(20.5rem, 10.5rem + 20vw, 40rem);
+    width: clamp(20.5rem, 10.5rem + 30vw, 32rem);
     height: 60vh;
     background-color: $wrapper-bg;
     border-radius: 0.5rem;
@@ -143,6 +161,11 @@ main {
         grid-column: 1 / 5;
         grid-row: 2 / 4;
 
+        &__slider {
+            grid-column: 1 / 5;
+            grid-row: 2 / 3;
+            align-self: center;
+        }
         &__monthly {
             grid-column: 1 / 2;
             grid-row: 4 / 5;
@@ -198,7 +221,8 @@ main {
                 width: 2.5rem;
                 padding: 0.2rem 0;
                 text-align: center;
-                border-radius: 30%;
+
+                border-radius: 1rem;
                 align-self: center;
                 justify-self: center;
                 background-color: $discount-bg;
@@ -208,8 +232,11 @@ main {
 
             &-pc {
                 grid-column: 4 / 5;
-                grid-row: 4 / 5;
-                font-size: 0.5rem;
+                grid-row: 3 / 4;
+                width: 4.5rem;
+                font-size: 0.6rem;
+
+                border-radius: 1rem;
                 align-self: center;
                 justify-self: center;
                 background-color: $discount-bg;
@@ -219,11 +246,96 @@ main {
     }
 }
 
+//media query for medium size
+@media only screen and (min-width: 50rem) {
+    .wrapper {
+        height: 50vh;
+    }
+
+    header {
+        .text {
+            flex-direction: row;
+        }
+    }
+    .top {
+        height: 60%;
+        padding: 1rem 1rem;
+        border-bottom: 1px solid rgb(236, 236, 236);
+        grid-template-columns: 42.5% 15% 22.5% 20%;
+        grid-template-rows: 30% 30% 40%;
+        &__pageviews {
+            font-size: 0.7rem;
+            grid-column: 1 / 2;
+            grid-row: 1 / 2;
+        }
+        &__price {
+            grid-column: 2 / 5;
+            grid-row: 1 / 2;
+            align-self: center;
+            justify-self: end;
+            padding-right: 1rem;
+            position: relative;
+
+            #price {
+                color: $primary-text;
+                font-weight: 800;
+                font-size: 1.8rem;
+            }
+
+            #month {
+                font-size: 0.8rem;
+            }
+        }
+
+        &__slider {
+            grid-column: 1 / 5;
+            grid-row: 2 / 3;
+            align-self: center;
+        }
+        &__billing {
+            grid-column: 1 / 2;
+            grid-row: 1 / 2;
+
+            &__monthly {
+                grid-column: 1/ 2;
+                grid-row: 3 / 4;
+                font-size: 0.8rem;
+                align-self: center;
+                justify-self: end;
+            }
+            &__yearly {
+                grid-column: 3 / 4;
+                grid-row: 3 / 4;
+                font-size: 0.8rem;
+                align-self: center;
+                justify-self: start;
+            }
+
+            &__discount {
+                grid-column: 3 / 4;
+                grid-row: 3 / 4;
+            }
+
+            &__toggle {
+                align-self: center;
+                justify-self: center;
+                width: 2.8rem;
+                height: 1.5rem;
+                background-color: $toggle-bg;
+                border-radius: 1.5rem;
+                grid-column: 2 / 3;
+                grid-row: 3 / 4;
+                position: relative;
+            }
+        }
+    }
+}
+
 .hidden {
     display: none;
 }
 
-.active {
+.yearly {
     transform: translateX(100%);
 }
 
@@ -238,8 +350,9 @@ main {
     .list {
         text-align: center;
         margin-bottom: 1.5rem;
-        width: 60%;
+        width: min(60%, 14rem);
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
     }
@@ -282,7 +395,41 @@ main {
     }
 }
 
+@media only screen and (min-width: 50rem) {
+    .bottom {
+        height: 40%;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+
+        .list {
+            display: block;
+            text-align: start;
+            font-size: 0.8rem;
+            margin-bottom: 1.5rem;
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+        }
+        .trial {
+            width: 10rem;
+            height: 3rem;
+            padding: 0.6rem;
+            border-radius: 1.5rem;
+            font-size: 0.7rem;
+            outline: 1px solid transparent;
+            border: none;
+            color: $cta-text;
+            background-color: $primary-text;
+            margin-bottom: 0.5rem;
+        }
+    }
+}
+
 footer {
+    display: none;
     position: fixed;
     bottom: 0.5rem;
 
@@ -292,5 +439,102 @@ footer {
     }
     .attribution a {
         color: hsl(228, 45%, 44%);
+    }
+}
+
+@media only screen and (min-width: 80rem) {
+    body {
+        width: 100vw;
+        height: 100vh;
+        background-image: none;
+        background-color: rgb(236, 236, 236);
+    }
+
+    .container {
+        background-color: white;
+        height: 80vh;
+        width: 80vw;
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
+        box-shadow: 0 0 10px #e2e2e2;
+    }
+
+    header {
+        margin: 1.5rem 0;
+        width: 90%;
+        height: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-image: url("../src/images/pattern-circles.svg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 110px;
+
+        h1 {
+            font-size: 1.1rem;
+            margin-bottom: 0.5rem;
+            color: $primary-text;
+        }
+
+        span {
+            font-size: 0.7rem;
+            color: $secondary-text;
+        }
+    }
+
+    main {
+        width: 100%;
+        height: 55%;
+    }
+
+    .top {
+        &__billing {
+            &__monthly {
+                font-size: 0.7rem;
+                align-self: center;
+                justify-self: end;
+            }
+            &__yearly {
+                font-size: 0.7rem;
+                align-self: center;
+                justify-self: start;
+            }
+
+            &__discount {
+            }
+
+            &__toggle {
+                align-self: center;
+                justify-self: center;
+                width: 2.6rem;
+                height: 1.5rem;
+                background-color: $toggle-bg;
+                border-radius: 1.5rem;
+            }
+        }
+    }
+
+    .bottom {
+        .list__item {
+            font-size: 0.6rem;
+            line-height: 1.4rem;
+        }
+
+        .trial {
+            width: 8rem;
+            height: 2.2rem;
+            padding: 0.6rem;
+            border-radius: 1.5rem;
+            font-size: 0.7rem;
+            outline: 1px solid transparent;
+            border: none;
+            color: $cta-text;
+            background-color: $primary-text;
+            margin-bottom: 0.5rem;
+        }
     }
 }
